@@ -1,3 +1,8 @@
+2006-08-07  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-treeview.c: make sure a gmarkup message is 
+	escaped.
+
 2006-08-06  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* data/baobab.glade:
